adjust flex properties in SingleAnime page to prevent release block wrapping

--- a/src/components/pages/singleAnimeLayout/singleAnime.scss
+++ b/src/components/pages/singleAnimeLayout/singleAnime.scss
@@ -63,9 +63,13 @@
       font-weight: 600;
     }
   }
+  &__main-title {
+    flex-shrink: 1;
+  }
   &__about {
     display: flex;
     justify-content: space-between;
+    column-gap: 20px;
   }
   &__release {
     display: flex;
@@ -74,6 +78,7 @@
     color: $secondary-text-color;
     font-size: 16px;
     font-weight: 600;
+    flex-shrink: 0;
   }
   &__descr {
     margin-top: 30px;
